samples/_failures_safe/1761093582_857153_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43582bc1.c: In function ‘main’:
./samples/SAFE/__tmp_43582bc1.c:145:17: error: expected expression at end of input
  145 |                 return
      |                 ^~~~~~
./samples/SAFE/__tmp_43582bc1.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43582bc1.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_43582bc1.c:145:17: error: expected declaration or statement at end of input
